Fix esling errors

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -14,17 +14,18 @@
   "parser": "babel-eslint",
   "rules": {
     "arrow-parens": 0,
-    "class-methods-use-this": 0,
-    "max-len": 0,
-    "func-names": 0,
-    "comma-dangle": 0,
     "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
+    "class-methods-use-this": 0,
+    "comma-dangle": 0,
+    "func-names": 0,
     "indent": [2, 4, { "SwitchCase": 1 }],
+    "max-len": 0,
+    "new-cap": 0,
     "no-use-before-define": [2, "nofunc"],
     "quotes": [2, "single"],
     "strict": [2, "never"],
     "babel/generator-star-spacing": 1,
-    "babel/new-cap": 1,
+    "babel/new-cap": 0,
     "babel/object-shorthand": 1,
     "babel/arrow-parens": 1,
     "babel/no-await-in-loop": 1,
