--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,6 +77,7 @@
     "react-router-redux": "^4.0.5",
     "react-s-alert": "^1.1.4",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.8.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^0.11.1",
