--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -31,9 +31,11 @@
     "import/prefer-default-export": 0,
     "indent": [2, 4, { "SwitchCase": 1 }],
     "jsx-a11y/anchor-has-content": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "max-len": 0,
     "new-cap": 0,
     "no-mixed-operators": 0,
+    "no-plusplus": 0,
     "no-use-before-define": [2, "nofunc"],
     "quotes": [2, "single"],
     "react/forbid-prop-types": 0,
