--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,80 +2,84 @@
   "name": "react-starter",
   "version": "0.1.0",
   "description": "Simple react starter project",
-  "scripts": {
-    "clean": "rimraf dist",
-    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack/config.prod.js --display-error-details",
-    "build": "npm run clean && npm i && npm run build:webpack",
-    "start": "node devServer.js",
-    "lint": "eslint src webpack devServer.js",
-    "wpdebug": "webpack --progress --profile --colors --display-error-details --display-cached --config webpack/config.dev.js"
-  },
+  "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kamahl19/react-starter.git"
   },
-  "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
+  "engines": {
+    "node": "7.0.0",
+    "npm": "^3.10.9"
+  },
+  "scripts": {
+    "clean": "rimraf dist",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack/config.prod.js --display-error-details",
+    "build": "npm run clean && npm run build:webpack",
+    "start": "node devServer.js",
+    "lint": "eslint src webpack devServer.js",
+    "wpdebug": "webpack --progress --profile --colors --display-error-details --display-cached --config webpack/config.dev.js"
+  },
   "homepage": "https://github.com/Kamahl19/react-starter#readme",
   "devDependencies": {
-    "autoprefixer": "^6.4.1",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
+    "autoprefixer": "^6.5.1",
+    "babel-core": "^6.18.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.13.0",
-    "babel-preset-react": "^6.11.1",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "cross-env": "^2.0.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
-    "eslint": "^3.5.0",
-    "eslint-config-airbnb": "^11.1.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs": "^0.8.4",
+    "fbjs": "^0.8.5",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "postcss-loader": "^0.13.0",
+    "postcss-loader": "^1.0.0",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.7.0",
+    "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
     "jwt-decode": "^2.1.0",
-    "lodash": "^4.14.0",
-    "react": "~15.3.1",
-    "react-bootstrap": "^0.30.3",
-    "react-dom": "~15.3.1",
+    "lodash": "^4.16.4",
+    "react": "^15.3.2",
+    "react-bootstrap": "^0.30.5",
+    "react-dom": "^15.3.2",
     "react-loaders": "^2.1.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router": "^3.0.0",
     "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.5",
-    "react-s-alert": "^1.1.4",
+    "react-router-redux": "^4.0.6",
+    "react-s-alert": "^1.2.0",
     "redux": "^3.6.0",
-    "redux-auth-wrapper": "^0.8.0",
-    "redux-logger": "^2.6.1",
+    "redux-auth-wrapper": "^0.9.0",
+    "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0",
     "yup": "^0.21.2"
