--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "description": "Backend for react starter project",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node app/server"
+    "start": "cross-env NODE_ENV=development nodemon --inspect app/server.js"
   },
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
   "devDependencies": {
-    "cross-env": "^2.0.1"
+    "cross-env": "^3.1.3",
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
     "bcryptjs": "~2.3.0",
