--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "react-starter-backend",
   "version": "0.1.0",
   "description": "Backend for react starter project",
+  "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
+  "license": "MIT",
+  "main": "app/server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon --inspect app/server.js"
   },
-  "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
-  "license": "MIT",
   "devDependencies": {
     "cross-env": "^3.1.3",
     "nodemon": "^1.11.0"
