--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,18 @@
   "description": "Backend for react starter project",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kamahl19/react-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kamahl19/react-starter/issues"
+  },
+  "engines": {
+    "node": "^7.2.0",
+    "npm": "^3.10.9"
+  },
+  "homepage": "https://github.com/Kamahl19/react-starter#readme",
   "main": "app/server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon --inspect app/server.js"
@@ -13,13 +25,13 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "bcryptjs": "~2.3.0",
-    "body-parser": "~1.15.2",
+    "bcryptjs": "^2.3.0",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
-    "express": "~4.14.0",
-    "jsonwebtoken": "~7.1.9",
-    "mongoose": "~4.6.0",
-    "morgan": "~1.7.0"
+    "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
+    "mongoose": "^4.7.0",
+    "morgan": "^1.7.0"
   }
 }
