--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "cross-env": "^3.1.3",
+    "eslint": "^3.11.1",
+    "eslint-plugin-node": "^3.0.4",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
