--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
+    "middleware-flow": "^0.8.0",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0"
   }
