--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,8 @@
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
   "engines": {
-    "node": "^7.2.0",
-    "npm": "^3.10.9"
+    "node": ">=7.2.0",
+    "yarn": ">=0.17.10"
   },
   "homepage": "https://github.com/Kamahl19/react-starter#readme",
   "main": "app/server.js",
