--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
   },
   "main": "app/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --inspect app/index.js"
+    "start": "cross-env NODE_ENV=development nodemon --inspect app/index.js",
+    "seed": "node seed-db.js"
   },
   "devDependencies": {
     "cross-env": "^3.1.3",
@@ -47,6 +48,7 @@
     "jsonwebtoken": "^7.2.1",
     "middleware-flow": "^0.8.0",
     "mongoose": "^4.7.2",
+    "mongoose-seed": "^0.3.1",
     "morgan": "^1.7.0"
   }
 }
