--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "middleware-flow": "^0.8.0",
     "mongoose": "^4.7.2",
     "mongoose-seed": "^0.3.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "pm2": "^2.1.6"
   }
 }
