--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/app/public",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "copyfiles": "^1.0.0",
+    "cross-env": "^3.1.3",
     "react-scripts-kamahl19-fork": "^0.3.6"
   },
   "dependencies": {
