--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,5 @@
 JWT_SECRET=secret
 PORT=3001
 MONGO_URL=mongodb://<username>:<password>@<server>.mlab.com:<port>/<project>
+CLIENT_URL_DEV=http://localhost:3000
+CLIENT_URL_PROD=
