--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "engines": {
     "node": ">=7.2.0",
-    "yarn": ">=0.17.10"
+    "npm": ">=3.10.10"
   },
   "scripts": {
     "start": "react-scripts start",
