--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,29 @@
 {
   "name": "react-starter-client",
   "version": "0.1.0",
+  "description": "Simple starter project including both React app and Express Rest API server",
+  "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kamahl19/react-starter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Kamahl19/react-starter/issues"
+  },
+  "keywords": ["express", "node", "node.js", "mongodb", "mongoose", "REST", "API", "boilerplate", "react", "redux"],
   "engines": {
     "node": ">=7.2.0",
     "npm": ">=3.10.10"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/app/public",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "copyfiles": "^1.0.0",
     "cross-env": "^3.1.3",
     "react-scripts-kamahl19-fork": "^0.3.6"
   },
