--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "copyfiles": "^1.0.0",
     "cross-env": "^3.1.3",
-    "react-scripts-kamahl19-fork": "^0.3.6"
+    "react-scripts-kamahl19-fork": "^0.3.6",
+    "redux-logger": "^2.7.4"
   },
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
@@ -44,7 +45,6 @@
     "react-s-alert": "^1.2.0",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^0.9.0",
-    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "yup": "^0.21.2"
   }
