--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,18 @@
   "bugs": {
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
-  "keywords": ["express", "node", "node.js", "mongodb", "mongoose", "REST", "API", "boilerplate", "react", "redux"],
+  "keywords": [
+    "express",
+    "node",
+    "node.js",
+    "mongodb",
+    "mongoose",
+    "REST",
+    "API",
+    "boilerplate",
+    "react",
+    "redux"
+  ],
   "engines": {
     "node": ">=7.2.0",
     "npm": ">=3.10.10"
@@ -31,12 +42,14 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "classnames": "^2.2.5",
+    "font-awesome": "^4.7.0",
     "jwt-decode": "^2.1.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-fontawesome": "^1.5.0",
     "react-loaders": "^2.3.0",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
