do not combine enviroments in .env config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,8 @@
 JWT_SECRET=secret
+
 PORT=3001
+
 MONGO_URL=mongodb://<username>:<password>@<server>.mlab.com:<port>/<project>
-CLIENT_URL_DEV=http://localhost:3000
-CLIENT_URL_PROD=
+
+# only necessary if client is not served by backend
+CORS_ORIGIN=http://localhost:3000
