--- a/client/.env.example
+++ b/client/.env.example
@@ -1,3 +1,4 @@
 REACT_APP_TOKEN_NAME=react-starter-token
-REACT_APP_BACKEND_URL_DEV=http://localhost:3001/api
-REACT_APP_BACKEND_URL_PROD=/api
+
+# use /api in production
+REACT_APP_BACKEND_URL=http://localhost:3001/api
