nodemailer ; reset password

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,7 @@ MONGO_URL=mongodb://<username>:<password>@<server>.mlab.com:<port>/<project>
 
 # only necessary if client is not served by backend
 CORS_ORIGIN=http://localhost:3000
+
+MAILGUN_API_KEY=
+# One of your domain names listed at your https://mailgun.com/app/domains
+MAILGUN_DOMAIN=
