--- a/backend/package.json
+++ b/backend/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "helmet": "^3.2.0",
+    "http-status": "^0.2.3",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.3",
     "middleware-flow": "^0.8.0",
