--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -2,6 +2,10 @@
     "plugins": ["node"],
     "extends": ["eslint:recommended", "plugin:node/recommended"],
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "node/exports-style": ["error", "module.exports"],
+        "node/no-unsupported-features": ["error", {
+            "ignores": ["asyncAwait"]
+        }]
     }
 }
