validate body/oarams on backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -42,12 +42,14 @@
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
     "bunyan": "^1.8.5",
+    "celebrate": "^4.0.0",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "helmet": "^3.2.0",
     "http-status": "^0.2.3",
+    "joi": "^10.1.0",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.3",
     "middleware-flow": "^0.8.0",
