--- a/backend/package.json
+++ b/backend/package.json
@@ -24,8 +24,8 @@
     "redux"
   ],
   "engines": {
-    "node": ">=7.5.0",
-    "npm": ">=3.10.10"
+    "node": "^7.5.0",
+    "yarn": "^0.20.3"
   },
   "main": "src/index.js",
   "scripts": {
@@ -35,7 +35,7 @@
   "devDependencies": {
     "cross-env": "^3.1.4",
     "eslint": "^3.14.1",
-    "eslint-plugin-node": "^3.0.5",
+    "eslint-plugin-node": "^4.0.1",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
@@ -57,7 +57,7 @@
     "mongoose": "^4.8.0",
     "mongoose-seed": "^0.3.1",
     "morgan": "^1.7.0",
-    "nodemailer": "^2.7.2",
+    "nodemailer": "^3.1.3",
     "nodemailer-mailgun-transport": "^1.2.4"
   }
 }
