BE - Add Prettier & Update dependencies

--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,11 +1,19 @@
 {
-  "plugins": ["node"],
-  "extends": ["eslint:recommended", "plugin:node/recommended"],
+  "plugins": [
+    "node"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:node/recommended"
+  ],
   "rules": {
     "no-console": 0,
-    "node/exports-style": ["error", "module.exports"],
-    "node/no-unsupported-features": ["error", {
-      "ignores": ["asyncAwait"]
-    }]
+    "node/exports-style": [
+      "error",
+      "module.exports"
+    ],
+    "node/no-unsupported-features": [
+      "error"
+    ]
   }
 }
