--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter-backend",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Simple starter project including both React app and Express Rest API server",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
@@ -24,39 +24,41 @@
     "redux"
   ],
   "engines": {
-    "node": "^7.5.0",
-    "yarn": "^0.20.3"
+    "node": ">=8.0.0",
+    "yarn": ">=0.24.6"
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --inspect --harmony src/index.js",
-    "seed": "node seed-db.js"
+    "start": "cross-env NODE_ENV=development nodemon --inspect src/index.js",
+    "seed": "node seed-db.js",
+    "prettify": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"{src,__{tests,mocks}__}/**/*.js\""
   },
   "devDependencies": {
-    "cross-env": "^3.1.4",
-    "eslint": "^3.14.1",
-    "eslint-plugin-node": "^4.0.1",
-    "nodemon": "^1.11.0"
+    "cross-env": "^5.0.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-node": "^5.0.0",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.4.0"
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
     "bcryptjs": "^2.4.0",
-    "body-parser": "^1.16.0",
-    "bunyan": "^1.8.5",
+    "body-parser": "^1.17.2",
+    "bunyan": "^1.8.10",
     "celebrate": "^4.0.1",
     "compression": "^1.6.2",
-    "cors": "^2.8.1",
+    "cors": "^2.8.3",
     "dotenv": "^4.0.0",
-    "express": "^4.14.1",
-    "helmet": "^3.4.0",
+    "express": "^4.15.3",
+    "helmet": "^3.6.1",
     "http-status": "^1.0.0",
-    "joi": "^10.2.0",
-    "jsonwebtoken": "^7.2.1",
+    "joi": "^10.5.2",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "middleware-flow": "^0.8.0",
-    "mongoose": "^4.8.0",
-    "mongoose-seed": "^0.3.1",
-    "morgan": "^1.7.0",
+    "mongoose": "^4.10.4",
+    "mongoose-seed": "^0.3.2",
+    "morgan": "^1.8.2",
     "nodemailer": "^3.1.3",
     "nodemailer-mailgun-transport": "^1.2.4"
   }
