remove product, admin & update user

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ PORT=3001
 
 MONGO_URL=mongodb://<username>:<password>@<server>.mlab.com:<port>/<project>
 
-# only necessary if client is not served by backend
+# only necessary if frontend is not served by backend
 CORS_ORIGIN=http://localhost:3000
 
 MAILGUN_API_KEY=
