--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "axios": "^0.16.1",
     "classnames": "^2.2.5",
     "enquire.js": "^2.1.6",
+    "history": "^4.6.1",
     "i18next": "^8.4.2",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
@@ -56,8 +57,8 @@
     "react-dom": "^15.5.4",
     "react-i18next": "^4.1.1",
     "react-redux": "^5.0.5",
-    "react-router": "^3.0.5",
-    "react-router-redux": "^4.0.8",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "redux": "^3.6.0",
     "redux-auth-wrapper": "^1.1.0",
     "redux-persist": "^4.8.0",
