--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,6 @@
     "antd": "^2.11.0",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
-    "enquire.js": "^2.1.6",
     "history": "^4.6.2",
     "i18next": "^8.4.2",
     "lodash.flattendeep": "^4.4.0",
@@ -57,6 +56,7 @@
     "react-dom": "^15.6.0",
     "react-i18next": "^4.1.2",
     "react-redux": "^5.0.5",
+    "react-responsive": "^1.3.0",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.6.0",
