--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,8 @@
     "yarn": ">=0.24.6"
   },
   "scripts": {
-    "start": "cross-env BROWSER=chrome react-scripts start",
-    "build": "cross-env react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
+    "start": "react-scripts start",
+    "build": "react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"{src,__{tests,mocks}__}/**/*.{js,less,css}\"",
@@ -37,30 +37,29 @@
   },
   "devDependencies": {
     "copyfiles": "^1.2.0",
-    "cross-env": "^5.0.1",
     "i18next-parser": "^0.12.0",
-    "prettier": "^1.4.4",
+    "prettier": "^1.5.3",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
-    "antd": "^2.11.0",
+    "antd": "^2.12.1",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "history": "^4.6.2",
-    "i18next": "^8.4.2",
+    "i18next": "^8.4.3",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
-    "react-i18next": "^4.1.2",
+    "react-i18next": "^4.6.4",
     "react-redux": "^5.0.5",
-    "react-responsive": "^1.3.0",
-    "react-router-dom": "^4.1.1",
+    "react-responsive": "^1.3.4",
+    "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
     "react-scripts-kamahl19-fork": "^1.1.0",
-    "redux": "^3.6.0",
-    "redux-auth-wrapper": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.1",
     "redux-persist": "^4.8.0",
     "redux-saga": "^0.15.3",
     "reselect": "^3.0.1"
