--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -17,7 +17,6 @@
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "build": "todo",
     "test": "jest",
     "prettify": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"{src,__{tests,mocks}__}/**/*.js\"",
     "react-devtools": "react-devtools"
@@ -47,6 +46,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.2",
     "react-native-dropdownalert": "^2.10.0",
+    "react-native-keyboard-manager": "^4.0.10-2",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
