remove support for decorators

--- a/backend/jsconfig.json
+++ b/backend/jsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "experimentalDecorators": true
+    "target": "ES6"
   },
-  "files": [
-    "src/"
-  ]
+  "files": ["src/"]
 }
