--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
+    "build": "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
+    "build-less": "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\"",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"{src,__{tests,mocks}__}/**/*.{js,less,css}\"",
@@ -26,11 +28,14 @@
   "devDependencies": {
     "copyfiles": "^1.2.0",
     "i18next-parser": "^0.12.0",
+    "less": "^2.7.2",
+    "nodemon": "^1.11.0",
     "prettier": "^1.5.3",
+    "react-scripts": "^1.0.10",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
-    "antd": "^2.12.2",
+    "antd": "^2.12.3",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "history": "^4.6.2",
@@ -45,7 +50,6 @@
     "react-responsive": "^1.3.4",
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
-    "react-scripts-kamahl19-fork": "^1.2.0",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.1",
     "redux-persist": "^4.8.0",
