--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -48,6 +48,7 @@
     "react-native": "0.46.2",
     "react-native-dropdownalert": "^2.10.0",
     "react-native-keyboard-manager": "^4.0.10-2",
+    "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
