--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,12 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --inspect src/index.js",
+    "start": "NODE_ENV=development && nodemon --inspect src/index.js",
     "seed": "node seed-db.js",
     "prettify": "prettier --single-quote --trailing-comma es5 --print-width 100 --write \"{src,__{tests,mocks}__}/**/*.js\""
   },
   "devDependencies": {
-    "cross-env": "^5.0.4",
-    "eslint": "^4.4.0",
+    "eslint": "^4.4.1",
     "eslint-plugin-node": "^5.1.1",
     "nodemon": "^1.11.0",
     "prettier": "^1.5.3"
@@ -36,14 +35,14 @@
     "compression": "^1.7.0",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
-    "express": "^4.15.3",
+    "express": "^4.15.4",
     "helmet": "^3.8.1",
     "http-status": "^1.0.1",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
     "middleware-flow": "^0.8.0",
-    "mongoose": "^4.11.5",
+    "mongoose": "^4.11.6",
     "mongoose-seed": "^0.3.2",
     "morgan": "^1.8.2",
     "nodemailer": "^4.0.1",
