--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -26,12 +26,12 @@
     "babel-jest": "20.0.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "2.0.0",
-    "eslint": "3.19.0",
-    "eslint-config-react-app": "^1.0.5",
-    "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "5.0.1",
-    "eslint-plugin-react": "7.0.1",
+    "eslint": "^4.1.1",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-import": "^2.6.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "jest": "20.0.4",
     "prettier": "^1.5.3",
     "react-devtools": "^2.5.0",
@@ -43,10 +43,10 @@
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.5.10",
-    "rc-form": "^1.4.3",
+    "rc-form": "^1.4.6",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
-    "react-native-dropdownalert": "^2.10.0",
+    "react-native-dropdownalert": "^2.11.0",
     "react-native-keyboard-manager": "^4.0.10-2",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
