--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -25,7 +25,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react-native": "2.0.0",
+    "babel-preset-react-native": "^3.0.1",
     "eslint": "^4.5.0",
     "eslint-config-react-app": "^2.0.0",
     "eslint-plugin-flowtype": "^2.34.1",
