--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -25,7 +25,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react-native": "^3.0.1",
+    "babel-preset-react-native": "^3.0.2",
     "eslint": "^4.5.0",
     "eslint-config-react-app": "^2.0.0",
     "eslint-plugin-flowtype": "^2.34.1",
@@ -33,7 +33,7 @@
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
     "jest": "20.0.4",
-    "prettier": "^1.5.3",
+    "prettier": "^1.6.1",
     "react-devtools": "^2.5.0",
     "react-test-renderer": "16.0.0-alpha.12",
     "redux-logger": "^3.0.6"
@@ -43,9 +43,9 @@
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.5.10",
-    "rc-form": "^1.4.6",
+    "rc-form": "^1.4.7",
     "react": "16.0.0-alpha.12",
-    "react-native": "0.47.1",
+    "react-native": "^0.47.2",
     "react-native-dropdownalert": "^2.11.0",
     "react-native-keyboard-manager": "^4.0.10-3",
     "react-native-vector-icons": "^4.3.0",
