--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -1,19 +1,9 @@
 {
-  "plugins": [
-    "node"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:node/recommended"
-  ],
+  "plugins": ["node"],
+  "extends": ["eslint:recommended", "plugin:node/recommended"],
   "rules": {
     "no-console": 0,
-    "node/exports-style": [
-      "error",
-      "module.exports"
-    ],
-    "node/no-unsupported-features": [
-      "error"
-    ]
+    "node/exports-style": ["error", "module.exports"],
+    "node/no-unsupported-features": ["error"]
   }
 }
