--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,30 +19,27 @@
     "start": "npm-run-all -p watch-less start-js",
     "start-js": "react-scripts start",
     "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\"",
-    "build":
-      "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
-    "build-less":
-      "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "build": "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
+    "build-less": "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,less}\"",
-    "extract-translations":
-      "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
+    "extract-translations": "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
     "copyfiles": "^1.2.0",
     "i18next-parser": "^0.12.0",
     "less": "^2.7.2",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.0",
     "npm-run-all": "^4.1.1",
     "prettier": "^1.6.1",
-    "react-scripts": "^1.0.12",
+    "react-scripts": "^1.0.13",
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^1.4.0"
   },
   "dependencies": {
-    "antd": "^2.12.8",
+    "antd": "^2.13.0",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
