--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -23,16 +23,16 @@
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-jest": "^21.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "^3.0.2",
-    "eslint": "^4.5.0",
+    "eslint": "^4.6.1",
     "eslint-config-react-app": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.34.1",
+    "eslint-plugin-flowtype": "^2.35.1",
     "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.2.1",
-    "jest": "20.0.4",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "jest": "^21.0.1",
     "prettier": "^1.6.1",
     "react-devtools": "^2.5.0",
     "react-test-renderer": "16.0.0-alpha.12",
