--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -23,36 +23,36 @@
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
-    "babel-jest": "^21.0.2",
+    "babel-jest": "^21.2.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "^4.0.0",
-    "eslint": "^4.7.2",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.35.1",
+    "eslint": "^4.8.0",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-plugin-flowtype": "^2.37.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.3.0",
-    "jest": "^21.1.0",
-    "prettier": "^1.7.0",
-    "react-devtools": "^2.5.1",
-    "react-test-renderer": "16.0.0-alpha.12",
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
+    "prettier": "^1.7.3",
+    "react-devtools": "^2.5.2",
+    "react-test-renderer": "^16.0.0",
     "redux-logger": "^3.0.6"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.0",
     "rc-form": "^1.4.8",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.3",
-    "react-native-dropdownalert": "^2.12.0",
+    "react": "^16.0.0",
+    "react-native": "^0.48.4",
+    "react-native-dropdownalert": "^3.1.0",
     "react-native-keyboard-manager": "^4.0.13-1",
     "react-native-vector-icons": "^4.4.0",
-    "react-navigation": "^1.0.0-beta.12",
+    "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-persist": "^4.10.0",
+    "redux-persist": "^4.10.1",
     "redux-saga": "^0.15.6",
     "reselect": "^3.0.1"
   },
