[RN] migrate to redux-persist v5

--- a/rnmobile/package.json
+++ b/rnmobile/package.json
@@ -59,7 +59,7 @@
     "react-navigation": "^1.0.0-beta.15",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-persist": "^4.10.1",
+    "redux-persist": "^5.0.0-rc.7",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   },
