--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "build-less": "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "flow": "flow",
     "prettify": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,less}\"",
     "extract-translations": "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
     "analyze": "source-map-explorer build/static/js/main.*"
@@ -34,7 +35,7 @@
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.1",
     "prettier": "^1.7.4",
-    "react-scripts": "^1.0.15",
+    "react-scripts": "^1.0.16",
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^1.5.0"
   },
@@ -42,22 +43,23 @@
     "antd": "^2.13.8",
     "axios": "^0.17.0",
     "classnames": "^2.2.5",
+    "flow-bin": "^0.58.0",
     "history": "^4.7.2",
-    "i18next": "^10.0.6",
+    "i18next": "^10.0.7",
     "localforage": "^1.5.3",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-i18next": "^6.0.6",
+    "react-i18next": "^6.1.0",
     "react-redux": "^5.0.6",
     "react-responsive": "^3.0.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
-    "redux-persist": "^5.2.0",
+    "redux-persist": "^5.2.2",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   }
