--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,less}\"",
+    "flow": "flow",
     "extract-translations": "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
     "copyfiles": "^1.2.0",
+    "flow-bin": "^0.59.0",
     "i18next-parser": "^0.12.0",
     "less": "^2.7.3",
     "nodemon": "^1.12.1",
@@ -39,7 +41,7 @@
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
-    "antd": "^2.13.9",
+    "antd": "^2.13.10",
     "axios": "^0.17.0",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
