--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,8 @@
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
   "engines": {
-    "node": ">=8.4.0",
-    "yarn": ">=0.27.5"
+    "node": ">=8.9.0",
+    "yarn": ">=1.3.0"
   },
   "scripts": {
     "start": "npm-run-all -p watch-less start-js",
@@ -41,25 +41,25 @@
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
-    "antd": "^2.13.10",
+    "antd": "^3.0.0-rc.3",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
-    "i18next": "^10.0.7",
+    "i18next": "^10.2.1",
     "localforage": "^1.5.3",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-i18next": "^6.1.0",
+    "react-i18next": "^7.0.2",
     "react-redux": "^5.0.6",
-    "react-responsive": "^3.0.0",
+    "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
-    "redux-persist": "^5.3.5",
+    "redux-persist": "^5.4.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   }
