--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "flow-bin": "^0.60.1",
     "i18next-parser": "^0.12.0",
     "less": "^2.7.3",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.12.2",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.8.2",
     "react-scripts": "^1.0.16",
@@ -41,7 +41,7 @@
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
-    "antd": "^3.0.0-rc.4",
+    "antd": "^3.0.0",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
@@ -52,7 +52,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-i18next": "^7.0.2",
+    "react-i18next": "^7.1.1",
     "react-redux": "^5.0.6",
     "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
