--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,47 +19,50 @@
     "start": "npm-run-all -p watch-less start-js",
     "start-js": "react-scripts start",
     "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\"",
-    "build": "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
-    "build-less": "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "build":
+      "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
+    "build-less":
+      "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,less}\"",
     "flow": "flow",
-    "extract-translations": "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
+    "extract-translations":
+      "i18next ./src/ --output ./src/app/i18n/locales/ --fileFilter \"*.js\" --locales en --recursive --ignore-variables --key-separator false --namespace-separator false --write-old false",
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
     "copyfiles": "^1.2.0",
-    "flow-bin": "^0.60.1",
-    "i18next-parser": "^0.12.0",
+    "flow-bin": "^0.64.0",
+    "i18next-parser": "^0.13.0",
     "less": "^2.7.3",
-    "nodemon": "^1.12.2",
+    "nodemon": "^1.14.11",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.8.2",
-    "react-scripts": "^1.0.16",
+    "prettier": "^1.10.2",
+    "react-scripts": "^1.1.0",
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
-    "antd": "^3.0.0",
+    "antd": "^3.1.4",
     "axios": "^0.17.1",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
-    "i18next": "^10.2.1",
-    "localforage": "^1.5.5",
+    "i18next": "^10.3.0",
+    "localforage": "^1.5.6",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-i18next": "^7.1.1",
+    "react-i18next": "^7.3.2",
     "react-redux": "^5.0.6",
     "react-responsive": "^4.0.3",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
-    "redux-persist": "^5.4.0",
+    "redux-persist": "^5.5.0",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   }
