upgrade frontend deps

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "build":
       "yarn build-less && react-scripts build && copyfiles -u 1 \"build/**/*\" ../backend/public",
     "build-less":
-      "lessc --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+      "lessc --js --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,less}\"",
@@ -32,37 +32,37 @@
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
-    "copyfiles": "^1.2.0",
-    "flow-bin": "^0.64.0",
+    "copyfiles": "^2.0.0",
+    "flow-bin": "^0.70.0",
     "i18next-parser": "^0.13.0",
-    "less": "^2.7.3",
-    "nodemon": "^1.14.11",
+    "less": "^3.0.2",
+    "nodemon": "^1.17.3",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.10.2",
-    "react-scripts": "^1.1.0",
+    "prettier": "^1.12.1",
+    "react-scripts": "^1.1.4",
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^1.5.0"
   },
   "dependencies": {
-    "antd": "^3.1.4",
-    "axios": "^0.17.1",
+    "antd": "^3.4.3",
+    "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
-    "i18next": "^10.3.0",
-    "localforage": "^1.5.6",
+    "i18next": "^11.2.3",
+    "localforage": "^1.7.1",
     "lodash.flattendeep": "^4.4.0",
     "lodash.reduce": "^4.6.0",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-i18next": "^7.3.2",
-    "react-redux": "^5.0.6",
-    "react-responsive": "^4.0.3",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-i18next": "^7.6.0",
+    "react-redux": "^5.0.7",
+    "react-responsive": "^4.1.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.2",
-    "redux-persist": "^5.5.0",
+    "redux-persist": "^5.9.1",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   }
