--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "antd": "^3.10.0",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "flat": "^4.1.0",
     "history": "^4.7.2",
     "i18next": "^11.9.1",
     "localforage": "^1.7.2",
     "lodash.flattendeep": "^4.4.0",
+    "lodash.omit": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
