--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
   "engines": {
-    "node": ">=8.12.0",
-    "yarn": ">=1.5.0"
+    "node": ">=10.14.2",
+    "yarn": ">=1.12.3"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
     "build": "yarn build-less && react-scripts build",
-    "build-less": "lessc --js --relative-urls --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "build-less": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "eject": "react-scripts eject",
     "format": "prettier --write \"{src,tests,__{tests,mocks}__}/**/*.{js,less}\"",
     "extract-translations": "i18next-scanner --config i18next-scanner.config.js 'src/**/*.js'",
@@ -28,27 +28,27 @@
     "storybook": "npm-run-all -p storybook:start watch-less",
     "storybook:start": "start-storybook -p 9001 -s public -c .storybook",
     "storybook:build": "build-storybook -s public -c .storybook",
-    "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\"",
-    "test": "react-scripts test --env=jsdom"
+    "test": "react-scripts test --env=jsdom",
+    "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\""
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.11",
-    "@storybook/addon-knobs": "^3.4.11",
-    "@storybook/addon-links": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
-    "@storybook/react": "^3.4.11",
+    "@storybook/addon-actions": "^4.1.3",
+    "@storybook/addon-knobs": "^4.1.3",
+    "@storybook/addon-links": "^4.1.3",
+    "@storybook/addons": "^4.1.3",
+    "@storybook/react": "^4.1.3",
     "babel-core": "^6.26.3",
     "i18next-scanner": "2.4.6",
-    "less": "^3.8.1",
-    "nodemon": "^1.18.4",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.14.3",
+    "less": "^3.9.0",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.3",
     "react-scripts": "^2.0.4",
     "redux-logger": "^3.0.6",
     "source-map-explorer": "^1.6.0"
   },
   "dependencies": {
-    "antd": "^3.10.0",
+    "antd": "^3.11.3",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "flat": "^4.1.0",
@@ -57,13 +57,14 @@
     "localforage": "^1.7.2",
     "lodash.flattendeep": "^4.4.0",
     "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-i18next": "^7.12.0",
     "react-redux": "^5.0.7",
-    "react-responsive": "^5.0.0",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
