--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-starter",
   "version": "2.0.0",
-  "description": "Simple starter for React",
+  "description": "Full-featured starter for React application",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
   "repository": {
