--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-auth-wrapper": "^2.0.3",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-modal": "^3.0.1",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.2",
