--- a/package.json
+++ b/package.json
@@ -52,16 +52,16 @@
     "classnames": "^2.2.6",
     "flat": "^4.1.0",
     "history": "^4.7.2",
-    "i18next": "^11.9.1",
+    "i18next": "^14.0.1",
     "localforage": "^1.7.2",
     "lodash.flattendeep": "^4.4.0",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lodash.reduce": "^4.6.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-i18next": "^7.12.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
+    "react-i18next": "^10.0.0-alpha.2",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
