--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "start": "npm-run-all -p watch-less start-js",
     "start-js": "react-scripts start",
     "storybook": "npm-run-all -p storybook:start watch-less",
-    "storybook:start": "start-storybook -p 9001 -s public -c .storybook",
-    "storybook:build": "build-storybook -s public -c .storybook",
+    "storybook:start": "start-storybook -p 9001 -s public -c storybook",
+    "storybook:build": "build-storybook -s public -c storybook",
     "test": "react-scripts test --env=jsdom",
     "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\""
   },
