--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "yarn": ">=1.13.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "analyze-deps": "source-map-explorer 'build/static/js/!(*main*)'",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "build": "yarn build-less && react-scripts build",
     "build-less": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "eject": "react-scripts eject",
